@@ -532,7 +532,7 @@ statement :
 /* ---------------------------------------------------------------------- */
 
 	| MVTIPL '#' EXPR
-	  { B2 (0x7f, 0x98); FE ($3, 13, 3); }
+	  { B3 (0x75, 0x70, 0x00); FE ($3, 20, 4); }
 
 /* ---------------------------------------------------------------------- */
 
@@ -939,7 +939,7 @@ token_table[] =
   { "pc", CREG, 1 },
   { "usp", CREG, 2 },
   { "fpsw", CREG, 3 },
-  { "cpen", CREG, 4 },
+  /* reserved */
   /* reserved */
   /* reserved */
   { "wr", CREG, 7 },
