@@ -1,3 +1,10 @@
+2009-11-04  DJ Delorie  <dj@redhat.com>
+
+	* rx-decode.opc (rx_decode_opcode) (mvtipl): Add.
+	(mvtcp, mvfcp, opecp): Remove.
+	* rx-decode.c: Regenerate.
+	* rx-dis.c (cpen): Remove.
+
 2009-11-03  Doug Evans  <dje@sebabeach.org>
 
 	* m32c-desc.c: Regenerate.
